MODIFY: hide buttons when config is locked.

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -78,6 +78,11 @@
             background: url(images/btn_write_16.png);
         }
     }
+    &__hide-when-locked {
+        &--hide {
+            display: none;
+        }
+    }
     table {
         .table;
     }
