--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -76,6 +76,9 @@
         }
         &--write {
             background: url(images/btn_write_16.png);
+            &--transit {
+                background: url(images/btn_write_modified_16.png);
+            }
         }
     }
     &__hide-when-locked {
