MODIFY: not to braking line three buttons on the label list editor.

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -23,7 +23,7 @@
     margin: 0;
     max-height: 450px;
     line-height: normal;
-    overflow-x: hidden;
+    overflow-x: scroll;
     padding: 5px;
     position: fixed;
     -webkit-touch-callout: none;
@@ -111,6 +111,7 @@
             }
             &__table-buttons {
                 width: 88px;
+                min-width: 88px;
             }
         }
         & .textae-editor__type-pallet {
