MODIFY: show message if no configurations exists.

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -103,11 +103,16 @@
         }
         &.textae-editor__type-pallet {
             &__label,
-            &__short-label {
+            &__short-label,
+            &__no-config {
                 overflow-x: hidden;
                 padding: 5px;
                 max-width: 500px;
                 text-align: left;
+            }
+            &__no-config {
+                font-weight: bold;
+                height: 27px;
             }
             &__table-buttons {
                 width: 88px;
