--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -15,7 +15,6 @@
 }
 /* pallet */
 .textae-editor__type-pallet {
-    background-color: rgba(200,255,255,0.9);
     border: solid 2px #333;
     border-radius: 5px;
     box-shadow: gray 10px 10px 10px 0;
@@ -34,6 +33,12 @@
     user-select: none;
     width: auto;
     z-index: 90;
+    &--entity {
+        background-color: rgba(200, 255, 255, .9);
+    }
+    &--relation {
+        background-color: rgba(255, 187, 187, .9);
+    }
     &__title {
         float: left;
         font-size: 1.4em;
