FIX: Can not show font-awesome icons.

--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -2,6 +2,7 @@
 @import "textae-editor-dialog.less";
 @import "textae-editor-dialog-autocomplete.less";
 @import "textae-editor-type-pallet.less";
+@import "modules/font-awesome.less";
 @import "modules/jquery-ui.min.less";
 @import "modules/toastr.min.less";
 @import "modules/jsoneditor.less";
