--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -7,7 +7,7 @@
 .textae-control {
     /*== Elements inside the textae_control ==*/
     &__title {
-        margin-right: 10px;
+        margin: 0 10px 0 0;
         font-weight: bold;
         text-shadow: 2px 2px 5px #555;
         font-size: 18px;
@@ -174,6 +174,16 @@
     }
     &--hide {
         display: none;
+    }
+
+    > p {
+        line-height: 1.5em;
+        &:not(.textae-control__title):not(.textae-control__icon--disabled) {
+            &:focus, &:active, &:hover {
+                background-color: #c4c4f0;
+                color: white;
+            }
+        }
     }
 
     .textae-control__icon {
