bugfix: The parent grid is displayed over the child grid

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -308,6 +308,7 @@
             &__entity-pane {
                 /*Set visibility style to hide entities, because size of entities are necesarry to render relation.*/
                 visibility: hidden;
+                height: 0;
             }
         }
         path,
