refactor: Fix code style

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -125,7 +125,7 @@
                 min-width: 88px;
             }
         }
-        & .textae-editor__type-pallet {
+        .textae-editor__type-pallet {
             &__default-icon {
                 display: inline-block;
                 position: relative;
@@ -206,7 +206,7 @@
 @-moz-document url-prefix() {
     .textae-editor__type-pallet {
         td {
-            & .textae-editor__type-pallet {
+            .textae-editor__type-pallet {
                 &__table-button {
                     &:before {
                         left: -6px;
