--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -140,12 +140,19 @@
                 display: inline-block;
                 width: 22px;
                 height: 22px;
+
+                // For Firefox, Make the button look like Google chrome.
+                border-width: 1px;
+                border-style: solid;
+                border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
+
                 &:before {
                     top: -1px;
                     left: -3px;
                     font-size: 1.2em;
                     color: #333333;
                 }
+        
                 &--disabled {
                     cursor: auto !important;
                     &:hover, &:active, &:focus {
@@ -199,20 +206,5 @@
         vertical-align: middle;
         height: 16px;
         width: 16px;
-    }
-}
-
-// for Firefox only
-@-moz-document url-prefix() {
-    .textae-editor__type-pallet {
-        td {
-            .textae-editor__type-pallet {
-                &__table-button {
-                    &:before {
-                        left: -6px;
-                    }
-                }
-            }
-        }
     }
 }
