--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -86,6 +86,9 @@
     &__speculation-button {
         background: url("./images/btn_speculation_16.png");
     }
+    &__attribute-button {
+        background: url("./images/btn_attribute_16.png");
+    }
     &__delete-button {
         background: url("./images/btn_delete_16.png");
     }
