feature: can Edit and remove attributes when selecting entities

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -359,7 +359,7 @@
 
     &--instance-mode&--editable,
     &--term-mode&--editable {
-        .textae-editor__attribute:hover {
+        .textae-editor__type-values--some_entity_selected .textae-editor__attribute:hover {
             box-shadow: 1px 1px 3px #600;
 
             .textae-editor__attribute-buttons {
