--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -4,8 +4,6 @@
     border-style: solid;
     border-width: 1px;
     margin: 0;
-    padding: 2px;
-    text-align: center;
 }
 .fontAwesomeIcon(@content) {
     position: relative;
@@ -92,103 +90,85 @@
             display: none;
         }
     }
-    table {
-        .table;
+    &__label,
+    &__short-label,
+    &__no-config {
+        overflow-x: hidden;
+        padding: 5px;
+        max-width: 500px;
+        text-align: left;
     }
-    tr {
-        .table;
+    &__use-number {
+        padding: 2px;
+        text-align: center;
     }
-    th {
-        padding-right: 8px;
+    &__no-config {
+        font-weight: bold;
+        height: 27px;
     }
-    td {
-        .table;
-        input,
-        button[type="button"] {
-            cursor: pointer;
+    &__table-buttons {
+        padding: 2px;
+        width: 88px;
+        min-width: 88px;
+        text-align: center;
+    }
+    &__default-icon {
+        display: inline-block;
+        position: relative;
+        top: 1px;
+        width: 10px;
+        height: 10px;
+        border: 2px solid darkgray;
+        border-radius: 50%;
+        background: radial-gradient(ellipse at center, black 0%, #dcdcdc 70%, #dcdcdc 100%);
+    }
+    &__table-button {
+        display: inline-block;
+        width: 22px;
+        height: 22px;
+
+        // For Firefox, Make the button look like Google chrome.
+        border-width: 1px;
+        border-style: solid;
+        border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
+
+        &:before {
+            top: -1px;
+            left: -3px;
+            font-size: 1.2em;
+            color: #333333;
         }
-        &.textae-editor__type-pallet {
-            &__label,
-            &__short-label,
-            &__no-config {
-                overflow-x: hidden;
-                padding: 5px;
-                max-width: 500px;
-                text-align: left;
-            }
-            &__no-config {
-                font-weight: bold;
-                height: 27px;
-            }
-            &__table-buttons {
-                width: 88px;
-                min-width: 88px;
-            }
-        }
-        .textae-editor__type-pallet {
-            &__default-icon {
-                display: inline-block;
-                position: relative;
-                top: 1px;
-                width: 10px;
-                height: 10px;
-                border: 2px solid darkgray;
-                border-radius: 50%;
-                background: radial-gradient(ellipse at center, black 0%, #dcdcdc 70%, #dcdcdc 100%);
-            }
-            &__table-button {
-                display: inline-block;
-                width: 22px;
-                height: 22px;
 
-                // For Firefox, Make the button look like Google chrome.
-                border-width: 1px;
-                border-style: solid;
-                border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
-
-                &:before {
-                    top: -1px;
-                    left: -3px;
-                    font-size: 1.2em;
-                    color: #333333;
-                }
-        
-                &--disabled {
-                    cursor: auto !important;
-                    &:hover, &:active, &:focus {
-                        outline: none;
-                    }
-                    &:before {
-                        color: #bbbbbb;
-                    }
-                }
+        &--disabled {
+            cursor: auto !important;
+            &:hover, &:active, &:focus {
+                outline: none;
             }
-            &__select-all {
-                &:before {
-                    .fontAwesomeIcon("\f046");
-                    top: 0;
-                    left: -4px;
-                }
+            &:before {
+                color: #bbbbbb;
             }
-            &__edit-type {
-                &:before {
-                    .fontAwesomeIcon("\f040");
-                }
-            }
-            &__remove {
-                &:before {
-                    .fontAwesomeIcon("\f1f8");
-                }
-            }
-            &__add {
-                margin: 2px 0;
-                padding: 3px 5px;
-            }
-
         }
     }
-    table {
-        width: 100%;
+    &__select-all {
+        &:before {
+            .fontAwesomeIcon("\f046");
+            top: 0;
+            left: -4px;
+        }
+    }
+    &__edit-type {
+        &:before {
+            .fontAwesomeIcon("\f040");
+        }
+    }
+    &__remove {
+        &:before {
+            .fontAwesomeIcon("\f1f8");
+        }
+    }
+    &__add {
+        margin: 2px 0;
+        padding: 3px 5px;
     }
     &__row {
         opacity: 0.8;
@@ -206,5 +186,23 @@
         vertical-align: middle;
         height: 16px;
         width: 16px;
+    }
+    table {
+        .table;
+        width: 100%;
+    }
+    tr {
+        .table;
+    }
+    th {
+        padding: 2px;
+        padding-right: 8px;
+    }
+    td {
+        .table;
+        input,
+        button[type="button"] {
+            cursor: pointer;
+        }
     }
 }
