--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -125,6 +125,9 @@
         border-style: solid;
         border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
 
+        // For Safari, Make the button look like Google chrome.
+        background-color: rgb(255, 255, 255);
+
         &:before {
             top: -1px;
             left: -3px;
@@ -146,7 +149,6 @@
         &:before {
             .fontAwesomeIcon("\f046");
             top: 0;
-            left: -4px;
         }
     }
     &__edit-type {
