--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -116,8 +116,9 @@
         background: radial-gradient(ellipse at center, black 0%, #dcdcdc 70%, #dcdcdc 100%);
     }
     &__table-button {
+        border-radius: 4px;
         display: inline-block;
-        width: 22px;
+        width: 24px;
         height: 22px;
 
         // For Firefox, Make the button look like Google chrome.
@@ -126,11 +127,9 @@
         border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
 
         // For Safari, Make the button look like Google chrome.
-        background-color: rgb(255, 255, 255);
+        background-color: #EEE;
 
         &:before {
-            top: -1px;
-            left: -3px;
             font-size: 1.2em;
             color: #333333;
         }
@@ -148,17 +147,22 @@
     &__select-all {
         &:before {
             .fontAwesomeIcon("\f046");
-            top: 0;
+            left: -2px;
+            top: 1px;
         }
     }
     &__edit-type {
         &:before {
             .fontAwesomeIcon("\f040");
+            left: -1px;
+            top: -1px;
         }
     }
     &__remove {
         &:before {
             .fontAwesomeIcon("\f1f8");
+            left: -1px;
+            top: 0px;
         }
     }
     &__add {
