--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -85,6 +85,9 @@
             background: url(images/btn_write_modified_16.png);
         }
     }
+    &__label {
+        cursor: pointer;
+    }
     &__label,
     &__short-label,
     &__no-config {
