--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -104,6 +104,43 @@
             width: 50%;
         }
     }
+    &__edit-type-dialog {
+        &__type{
+            display: flex;
+            margin-bottom: 30px;
+            &__predicate {
+                margin-right: 30px;
+            }
+            &__value {
+                margin-right: 30px;
+                &__value {
+                    width: 450px;
+                }
+            }
+            &__label {
+                margin-right: 30px;
+            }
+        }
+        &__attribute {
+            display: flex;
+            margin-bottom: 30px;
+            &__predicate {
+                margin-right: 30px;
+                &__value {
+                    width: 262px;
+                }
+            }
+            &__value {
+                margin-right: 30px;
+                &__value {
+                    width: 262px;
+                }
+            }
+            &__remove {
+                padding-top: 11px;
+            }
+        }
+    }
     &__edit-type-definition-dialog {
         &__container {
             display: flex;
