--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -104,7 +104,7 @@
             width: 50%;
         }
     }
-    &__edit-type-dialog {
+    &__edit-type-definition-dialog {
         &__container {
             display: flex;
             flex-wrap: wrap;
