feature: Do not collapse consecutive whitespace characters in the target text into one character

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -5,6 +5,8 @@
 }
 /* common css of controls */
 .textae-control {
+    white-space: normal;
+
     /*== Elements inside the textae_control ==*/
     &__title {
         margin: 0 10px 0 0;
