--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -31,6 +31,7 @@
     -ms-user-select: none;
     user-select: none;
     width: auto;
+    white-space: normal;
     z-index: 90;
     &--entity {
         background-color: rgba(200, 255, 255, .9);
