feature: An entity cannot have more than one attribute with the same predicate

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -140,6 +140,16 @@
                 padding-top: 11px;
             }
         }
+        &__attribute__message {
+            color: red;
+            padding-bottom: 30px;
+            &--valid {
+                display: none;
+            }
+        }
+        &__ok-button[disabled="dsiabled"] {
+            opacity: 0.1;
+        }
     }
     &__edit-type-definition-dialog {
         &__container {
