--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -7,6 +7,7 @@
 @import "modules/toastr.min.less";
 @import "modules/jsoneditor.less";
 @import "textae-editor.less";
+@import (less) "../../../node_modules/jsondiffpatch/public/formatters-styles/html.css";
 
 .textae-editor,
 .textae-editor *{
