feature: Display label and link information in relation labels as well as type names

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -343,6 +343,14 @@
         }
     }
 
+    &--editable {
+        .textae-editor__relation__label a {
+            color: black;
+            pointer-events: none;
+            text-decoration: none;
+        }
+    }
+
     &-veil {
         cursor: wait;
         height: 100%;
