bugfix: If the link string in the status bar is too long, the entire string is not displayed

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -81,6 +81,7 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
                 vertical-align: bottom;
+                white-space: nowrap;
                 width: 90%;
             }
         }
