--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -313,4 +313,51 @@
       }
     }
   }
+
+  // edit-attribute-defintion-dialog__pred
+  &__edit-attribute-definition-dialog {
+    &__container {
+      flex-direction: column;
+      display: flex;
+    }
+
+    &__row {
+      display: flex;
+      flex-direction: row;
+      justify-content: start;
+    }
+
+    &__pred {
+      input {
+        width:199px;
+      }
+    }
+
+    &__default {
+      padding-left: 50px;
+      input {
+        width: 246px;
+      }
+    }
+
+    &__min {
+      input {
+        width: 50px;
+      }
+    }
+
+    &__max {
+      input {
+        margin-left: 18px;
+        width: 50px;
+      }
+    }
+
+    &__step {
+      input {
+        margin-left: 18px;
+        width: 50px;
+      }
+    }
+  }
 }
