feature: Add or remove flag and selection attribute
- Add flag and selection attributes in the configuration of 1_annotation.json
- Load attribute definition from annotation file to the TypeDefinition
- Show label and color of attributes in the TypeDom
- Observe input 1, 2, 3, 4, 5 as attribute key
- Add flag and selection attribute to selecting entities when pushing attributes key
- Remove flag and selection attribute when pushing attributes key with shift key
- Remove flag attribute when pushing attribute key with selecting entity with same predicate attribute
- Show selection attribute pallet when pushing attribute key with selecting entity with same predicate attribute
- Remove selection attribute by remove button in selection attribute pallet

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -191,6 +191,9 @@
         }
       }
 
+      .textae-editor__attribute {
+      }
+
       .textae-editor__type-label,
       .textae-editor__attribute,
       .textae-editor__attribute-label {
@@ -229,6 +232,8 @@
 
   &__attribute {
     height: 18px;
+    margin: 0 2px;
+    width: calc(100% - 4px);
   }
 
   &__entity-pane {
