--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -44,6 +44,10 @@
     background-color: rgba(255, 187, 187, .9);
   }
 
+  &--selection-attribute {
+    background-color: rgba(200, 255, 255, .9);
+  }
+
   &__title {
     float: left;
     font-size: 1.4em;
